codepkg/objects/Worker__c.object
<CustomObject>
    <fields>
        <fullName>Cathedra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cathedra</label>
        <referenceTo>Cathedra__c</referenceTo>
        <relationshipLabel>Workers</relationshipLabel>
        <relationshipName>Workers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>Faculty</label>
        <referenceTo>Faculty__c</referenceTo>
        <relationshipLabel>Workers</relationshipLabel>
        <relationshipName>Workers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>University</label>
        <referenceTo>University__c</referenceTo>
        <relationshipLabel>Workers</relationshipLabel>
        <relationshipName>Workers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Worker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Worker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workers</pluralLabel>
    <recordTypes>
        <fullName>Management</fullName>
        <active>true</active>
        <label>Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher</fullName>
        <active>true</active>
        <label>Teacher</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>